Bug 271526 - powerdevil/daemon/backends/upower/xrandrbrightness.cpp fails to compile due to no Xrandr-1.3 on Solaris 10
Summary: powerdevil/daemon/backends/upower/xrandrbrightness.cpp fails to compile due t...
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Solaris
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-23 03:25 UTC by Ben Taylor
Modified: 2011-09-30 20:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Taylor 2011-04-23 03:25:12 UTC
Version:           4.6
OS:                Solaris

Solaris 10/Update 9 X86, Sun Studio 12

XRRGetScreenResourcesCurrent is part of XRANDR-1.3.  the usual use of
this function is to isolate it via:

#ifdef HAVE_XRANDR_1_3
    if (minor > 2)
        m_resources = XRRGetScreenResourcesCurrent(QX11Info::display(), QX11Info::appRootWindow()); // ve
rsion 1.3, faster version
    else
#endif
        m_resources = XRRGetScreenResources(QX11Info::display(), QX11Info::appRootWindow());



Reproducible: Always

Steps to Reproduce:
Compile KDE4.6.2 via the KDE4 Solaris project as defined on http://techbase.kde.org/Projects/KDE_on_Solaris on Solaris 10 with Sun Studio 12

Actual Results:  
pkgbuild: "/export/home/bent/packages/BUILD/kdebase-workspace-4.6.2/powerdevil/daemon/backends/upower/xrandrbrightness.cpp", line 57: Error: The function "XRRGetScreenResourcesCurrent" must have a prototype.
pkgbuild: 1 Error(s) detected.
pkgbuild: make[3]: *** [powerdevil/daemon/CMakeFiles/kded_powerdevil.dir/backends/upower/xrandrbrightness.o] Error 1
pkgbuild: make[3]: Leaving directory `/export/home/bent/packages/BUILD/kdebase-workspace-4.6.2/build-kdebase-workspace-4.6.2'
pkgbuild: make[2]: *** [powerdevil/daemon/CMakeFiles/kded_powerdevil.dir/all] Error 2
pkgbuild: make[2]: Leaving directory `/export/home/bent/packages/BUILD/kdebase-workspace-4.6.2/build-kdebase-workspace-4.6.2'
pkgbuild: make[1]: *** [all] Error 2


Expected Results:  
A similar patch to this file compiled on Solaris 10
Comment 1 Dario Freddi 2011-09-30 20:23:02 UTC
Git commit 2d7eee312c43e9566e899f1ed7432f53b54a4f47 by Dario Freddi.
Committed on 30/09/2011 at 22:22.
Pushed by dafre into branch 'master'.

Exclude XRandR 1.3 specific bits from compilation if XRandR 1.3 is not found

BUG: 271526

M  +3    -0    config-X11.h.cmake
M  +8    -2    powerdevil/daemon/backends/upower/xrandrbrightness.cpp

http://commits.kde.org/kde-workspace/2d7eee312c43e9566e899f1ed7432f53b54a4f47
Comment 2 Dario Freddi 2011-09-30 20:23:35 UTC
Git commit f17a1bde8dff2a220de8b9c091b1d53a01e22d61 by Dario Freddi.
Committed on 30/09/2011 at 22:22.
Pushed by dafre into branch 'KDE/4.7'.

Exclude XRandR 1.3 specific bits from compilation if XRandR 1.3 is not found

BUG: 271526

M  +3    -0    config-X11.h.cmake
M  +8    -2    powerdevil/daemon/backends/upower/xrandrbrightness.cpp

http://commits.kde.org/kde-workspace/f17a1bde8dff2a220de8b9c091b1d53a01e22d61