Exclude XRandR 1.3 specific bits from compilation if XRandR 1.3 is not found

BUG: 271526