daemon/backends/upower/xrandrbrightness.cpp
@@ -19,6 +19,8 @@
 
 #include "xrandrbrightness.h"
 
+#include <config-X11.h>
+
 #include <stdio.h>
 #include <stdlib.h>
 
@@ -53,10 +55,14 @@ XRandrBrightness::XRandrBrightness()
         return;
     }
 
-    if (minor > 2)
+#ifdef HAS_RANDR_1_3
+    if (minor > 2) {
         m_resources = XRRGetScreenResourcesCurrent(QX11Info::display(), QX11Info::appRootWindow()); // version 1.3, faster version
-    else
+    } else
+#endif
+    {
         m_resources = XRRGetScreenResources(QX11Info::display(), QX11Info::appRootWindow());
+    }
 
     if (!m_resources)
     {
