config-X11.h.cmake
@@ -36,3 +36,6 @@
 
 /* Define if you have the XSync extension */
 #cmakedefine HAVE_XSYNC 1
+
+/* Define if you have XRandR 1.3 */
+#cmakedefine HAS_RANDR_1_3 1
